<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageButton
        android:id="@+id/btnConfirm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/key_confirm"
        android:src="@drawable/baseline_done_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvClassesTitle">

        <LinearLayout
            android:id="@+id/containerClasses"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etTaskTitle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/bottom_nav_style"
                android:ems="10"
                android:hint="@string/key_addClass"
                android:imeOptions="actionDone"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="text"
                android:paddingLeft="15.0dip"
                android:paddingTop="20.0dip"
                android:paddingRight="15.0dip"
                android:paddingBottom="20.0dip"
                android:textColor="?android:textColor"
                android:textColorLink="?android:textColor" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvClassesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/bottom_nav_style"
        android:paddingStart="70.0dip"
        android:paddingTop="10.0dip"
        android:paddingEnd="70.0dip"
        android:paddingBottom="10.0dip"
        android:text="@string/key_Classes"
        android:textSize="28.0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
